fixed what happens when the apps overflow x

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -121,15 +121,40 @@ img.pair-img {
 
 
 div#apps-container {
+    /*
     width: 100%;
     display: block;
+    */
     /* text-align: center; */
+    
+    /*
     margin-bottom: 3em;
     height: 10em;
     box-shadow: inset 0 3px 3px rgba(105, 104, 104, 0.3), 
                 inset 0 -8px 8px -8px #696868;
+
+    */ 
     /* background-color: white; */
+    /*
     text-align: center;
+    */
+
+    display: inline-block;
+    box-shadow: inset 2px 2px 1px rgba(0,0,0, .1),
+                inset  0 -8px 8px -8px #696868;
+    /* margin-left: 1em; */
+    text-align:center;
+    height: 10em;
+    margin-top: 1em;
+    width: 100%;
+    overflow-x: auto;
+    white-space: nowrap;
+    z-index: 1;
+    word-break: break-all;
+    position: absolute;
+    left: 0;
+
+    
 }
 
 div#error-box{
